--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@fingerprintjs/fingerprintjs": "^4.6.0",
+    "@ng-select/ng-select": "^14.7.0",
     "ag-grid-angular": "^33.2.4",
     "ag-grid-community": "^33.2.4",
     "axios": "^1.7.9",
