--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -28,6 +28,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
+              "node_modules/flatpickr/dist/flatpickr.css",
               "src/styles.css"
             ],
             "scripts": []
