--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,10 +25,13 @@
     "@angular/router": "^19.1.0",
     "@fingerprintjs/fingerprintjs": "^4.6.0",
     "@ng-select/ng-select": "^14.7.0",
+    "@types/flatpickr": "^3.0.2",
     "ag-grid-angular": "^33.2.4",
     "ag-grid-community": "^33.2.4",
+    "angularx-flatpickr": "^8.1.0",
     "axios": "^1.7.9",
     "express": "^4.21.2",
+    "flatpickr": "^4.6.13",
     "profanities": "^3.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
