--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.7.9",
     "express": "^4.21.2",
     "flatpickr": "^4.6.13",
+    "ng-recaptcha": "^13.2.1",
     "profanities": "^3.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -42,6 +43,7 @@
     "@angular/cli": "^19.1.4",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^22.15.18",
     "angular-eslint": "19.1.0",
     "eslint": "^9.20.0",
     "jasmine-core": "~5.5.0",
